--- a/login.html
+++ b/login.html
@@ -15,8 +15,8 @@
     <div class="section-1">
     <h1>login</h1>
     <form id="login-form">
-        <input type="text" id="login-username" placeholder="اسم المستخدم" required>
-        <input type="password" id="login-password" placeholder="كلمة المرور" required>
+        <input type="text" id="login-username" placeholder="Name..." required>
+        <input type="password" id="login-password" placeholder="password..." required>
         <a href="user.html">Create a new account</a>
       
         <button type="submit">log</button>
